--- a/MisfitCloudAPIWrapperDemo_iOS/MisfitCloudAPIWrapperDemo_iOS/Info.plist
+++ b/MisfitCloudAPIWrapperDemo_iOS/MisfitCloudAPIWrapperDemo_iOS/Info.plist
@@ -25,7 +25,7 @@
 			<string>None</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>mfc-mIKXvp3Fq3jy0ibo</string>
+				<string>mfc-test</string>
 			</array>
 		</dict>
 	</array>
